# Sound_PNG

./: .gitignore  Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: lib.rs
app/: Cargo.toml  build.rs
app/docs/: API_Reference.md  API_Reference_CN.md  Developer_Documentation.md  User_Manual.md
app/src/: decoder.rs  gui.rs  gui_logging_snippet.rs  main.rs  plugin_loader.rs  security.rs  stream_decoder.rs  stream_encoder.rs  ui.slint
app/ui/: main.slint  state.slint  theme.slint
app/ui/components/: console.slint  widgets.slint
app/ui/tabs/: batch.slint  decode.slint  encode.slint  settings.slint
docs/: Developer_Documentation.md  User_Manual.md
logs/: sound_png.log.2025-12-07  sound_png.log.2025-12-08
plugins/batch_processor/: Cargo.toml
plugins/batch_processor/src/: lib.rs
plugins/sequence_frame/: Cargo.toml  README.md
plugins/sequence_frame/src/: lib.rs
plugins/sn_py_bridge/: Cargo.toml
plugins/sn_py_bridge/src/: lib.rs  server.py
src/: converter.rs  decoder.rs  encoder.rs  gui.rs  gui_streaming_stub.rs  header.rs  main.rs  repro_test.rs  stream_decoder.rs  stream_encoder.rs  ui.slint  utils.rs
