[package]
name = "sound_png"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
hound = "3.5.1"
slint = "1.5.1"
rfd = "0.14.1"
flate2 = "1.0"
image = "0.24"
minimp3 = "0.5"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4.3"
png = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
slint-build = "1.5.1"
