[package]
name = "sound_png"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8"
rfd = "0.12"
image = "0.24"
hound = "3.5"
png = "0.17"
anyhow = "1.0"
flate2 = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sound_png_api = { path = "../api" }
libloading = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3"
minimp3 = "0.5"

[build-dependencies]
slint-build = "1.8"

[profile.release]
lto = true
strip = true
opt-level = 3

