[package]
name = "sn_py_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sound_png_api = { path = "../../api" }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# No pyo3
